<resources>
    <string name="app_name">Hotel</string>
    <string name="action_settings">Settings</string>

    <string name="menu_action_login">Login</string>

    <string name="title_activity_prototype_suchform">Hotel App</string>
    <string name="txt_suchen">Zimmer Suchen</string>
    <string name="btn_hotelinfo">Info</string>
    <string name="endDate">Abreisedatum *</string>
    <string name="startDate">Anreisedatum *</string>
    <string name="title_activity_zimmer_liste">ZimmerListe</string>
    <string name="title_activity_zimmer_detail">zimmer_detail</string>
    <string name="zimmerauswahl">Zimmerauswahl</string>
    <string name="einzelzimmer">Einzel</string>
    <string name="doppelzimmer">Doppel</string>
    <string name="familienzimmer">Familie(4 +1 Betten)</string>
    <string name="title_activity_accordeon_zimmer">Zimmerauswahl</string>
    <string name="title_activity_login">Einloggen</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="txt_required_fields">Bitte alle mit * gekennzeichneten felder ausfüllen!</string>

    <string name="standardZimmer">Standard</string>
    <string name="comfortZimmer">Comfort</string>
    <string name="luxusZimmer">Luxus</string>

    <string name="bookingHeader">Hinterlegen sie bitte ihre Daten für die Buchung.</string>
    <string name="bookingTitle">Ihre Buchung</string>
    <string name="prompt_firstname">* Vorname</string>
    <string name="prompt_lastname">* Nachname</string>
    <string name="prompt_birthdate">Geburtsdatum</string>
    <string name="prompt_street">Straße, Haus Nr.</string>
    <string name="prompt_plz">PLZ</string>
    <string name="prompt_city">Ort</string>
    <string name="prompt_phone">Telefon</string>
    <string name="prompt_show_billing_adr">Andere Rechnungsadresse hinzufügen</string>

    <string name="btn_goto_register_descision">Weiter zur Buchung</string>
    <string name="btn_goto_booking">Weiter ohne Registrierung</string>
    <string name="btn_goto_register">Zur Registrierung</string>
    <string name="description_register_desctision">Sie können sich registrieren um weitere Reservierungen ohne erneute Eingabe von persönlichen Daten durchführen zu können.</string>
    <string name="title_activity_register_descision">Fortfahren?</string>

    <string name="title_activity_booking">Buchen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">* Email</string>
    <string name="prompt_password">* Passwort</string>
    <string name="prompt_password_repeat">* Passwort wiederholen</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="action_register">Registrieren</string>
    <string name="action_registerAndBooking">Registrieren und Buchen</string>

    <string name="action_book">Buchen</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello">Hello World, HelloAccordion_JAVA!</string>
    <!--<string name="app_name">HelloAccordion_JAVA</string>-->

    <color name="white">#ffffffff</color>
    <color name="black">#ff000000</color>
    <color name="red">#FF0000</color>
    <string name="title_activity_test_activity">test_activity</string>
    <string name="title_activity_check_booking">CheckBooking</string>

</resources>
