<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fhdw.hotel.Activity.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Bitte registrieren sie sich:"
        android:id="@+id/RegisterTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/RegisterTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/prompt_lastname"
        android:ems="10"
        android:id="@+id/lastname"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/prompt_firstname"
        android:id="@+id/firstname"
        android:layout_below="@+id/lastname"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/enter_password"
        android:layout_below="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repeat_password"
        android:layout_below="@+id/enter_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_password_repeat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/Register_btn"
        android:onClick="RegisterNewUser"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
