<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Contents of the Booking page-->
    <ScrollView
        android:id="@+id/sv_booking"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_booking_inside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bookingTitle"
                android:textSize="21dip"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bookingHeader"
                android:textSize="18dip"
                android:textStyle="bold"
                android:typeface="sans" />

            <!-- input field for the firstname, required and checked in the Activity javacode-->
            <EditText
                android:id="@+id/txtFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_firstname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- input fielld for lastname, required-->
            <EditText
                android:id="@+id/txtLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lastname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />


            <!-- input field for birthday-->
            <EditText
                android:id="@+id/dtpBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/prompt_birthdate"
                android:inputType="date"
                android:onClick="getArrivalDate" />

            <!-- inputfield for birthplace-->
            <EditText
                android:id="@+id/txtBirthplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="* Geburtsort"
                android:inputType="text" />

            <!-- input field for the streetname and house No. of the user-->
            <EditText
                android:id="@+id/txtContactStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_street"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- input field for the postal code of the users city-->
            <EditText
                android:id="@+id/txtContactPostalcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_plz"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- input field for the streetname of the user-->
            <EditText
                android:id="@+id/txtContactCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- input checkbox for showing inputs for an additional billing adress-->
            <CheckBox
                android:id="@+id/cbAddBillingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_show_billing_adr" />

            <!-- invisible content till checkbox above is checked-->
            <LinearLayout
                android:id="@+id/llBillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- input field for the billing streetname & house No. of the user-->
                <EditText
                    android:id="@+id/txtBillingStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_street"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!-- input field for the postalcode of the users city-->
                <EditText
                    android:id="@+id/txtBillingPostalcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_plz"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!-- input field for the cityname of the user-->
                <EditText
                    android:id="@+id/txtBillingCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />


            </LinearLayout>
            <!-- Invisible content end -->

            <!-- submit booking button-->
            <Button
                android:id="@+id/btn_submit_booking"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="OnClickBooking"
                android:text="@string/action_book"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>