<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fhdw.hotel.PrototypeSuchform">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Wählen sie ihre Zielstadt"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stadt_spinner"
                android:entries="@array/stadt_anzeige"
                android:entryValues="@array/stadt_werte"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Wählen sie die anzahl der Personen (max. 10)"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personen_spinner"
                android:entries="@array/anz_personen"
                android:entryValues="@array/anz_personen"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp" />


            <TextView
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:id="@+id/startDate"
                android:labelFor="@+id/inputStartDate"
                android:layout_marginTop="10px" />



            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/inputStartDate"
                android:layout_marginTop="10px" />

            <TextView
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:id="@+id/endDate"
                android:labelFor="@+id/inputEndDate"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/inputEndDate"
                android:layout_marginTop="10px"
                android:layout_marginBottom="25dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/zimmerauswahl"
                    android:id="@+id/textView4" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="67dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/einzelzimmer"
                        android:id="@+id/textView5" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:layout_column="4" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/doppelzimmer"
                        android:id="@+id/textView6" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText2"
                        android:layout_column="4" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/familienzimmer"
                        android:id="@+id/textView7" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText3"
                        android:layout_column="4" />
                </TableRow>

            </TableLayout>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_suchen"
            android:id="@+id/search"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />

        <!--<Button-->
            <!--android:id="@+id/alertDialogBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Alert Dialog" />-->
    </RelativeLayout>

</ScrollView>



