<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fhdw.hotel.Activity.SearchFormular">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Wählen sie ihre Zielstadt"
                android:id="@+id/lblSelectDestinationCity" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnCity"
                android:entries="@array/stadt_anzeige"
                android:entryValues="@array/stadt_werte"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Wählen sie die anzahl der Personen (max. 10)"
                android:id="@+id/lblSelectPersonCount" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnPersonCount"
                android:entries="@array/anz_personen"
                android:entryValues="@array/anz_personen"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp" />


            <TextView
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:id="@+id/lblArrivalDate"
                android:labelFor="@+id/txtArrivalDate"
                android:layout_marginTop="10px" />



            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/txtArrivalDate"
                android:layout_marginTop="10px"
                android:onClick="getArrivalDate" />

            <TextView
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:id="@+id/lblDepartureDate"
                android:labelFor="@+id/txtDepartureDate"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/txtDepartureDate"
                android:layout_marginTop="10px"
                android:layout_marginBottom="25dp"
                android:onClick="getDepartureDate" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/zimmerauswahl"
                    android:id="@+id/lblRoomSelection" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="67dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/einzelzimmer"
                        android:id="@+id/lblSingleRoomSelection"
                        android:labelFor="@+id/txtSingleRoomCount" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/txtSingleRoomCount"
                        android:layout_column="4"
                        android:text="0"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/doppelzimmer"
                        android:id="@+id/lblDoubleRoomSelection"
                        android:labelFor="@+id/txtDoubleRoomCount"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/txtDoubleRoomCount"
                        android:layout_column="4"
                        android:text="0"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/familienzimmer"
                        android:labelFor="@+id/txtFamilyRoomCount"
                        android:id="@+id/lblFamilyRoomSelection" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/txtFamilyRoomCount"
                        android:layout_column="4"
                        android:text="0"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_suchen"
            android:id="@+id/search"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:onClick="SearchRoomOnClick"/>
    </RelativeLayout>

</ScrollView>



